--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div> -->
         </div>
         <div class="todo__nav hidden" id="nav__bar">
-            <div class="todo__nav todo__item_left">1 items left</div>
+            <div class="todo__nav todo__item_left" id="item__left">1 items left</div>
             <button class="todo__nav todo__all">All</button>
             <button class="todo__nav todo__active">Active</button>
             <button class="todo__nav todo__completed">Completed</button>
