--- a/index.html
+++ b/index.html
@@ -21,13 +21,23 @@
             </div>
             <input class="todo__input" type="text" placeholder="What needs to be done?" autofocus>
         </div>
-        <div class="todo__list">
+        <div class="todo__list todo__all">
             <!-- <div class="todo__item" id="item__0">
                 <input class="todo__checkbox" type="checkbox" id="checkbox__0" />
                 <div class=" todo__content">1st todo
                 </div>
                 <button class="todo__delete" id="delete__0">X</button>
             </div> -->
+        </div>
+        <div class="todo__list todo__active hidden">
+            <div class="todo__item" id="item__0">
+                <input class="todo__checkbox" type="checkbox" id="checkbox__0" />
+                <div class=" todo__content">1st todo
+                </div>
+                <button class="todo__delete" id="delete__0">X</button>
+            </div>
+        </div>
+        <div class="todo__list todo__completed hidden">
         </div>
         <div class="todo__nav hidden" id="nav__bar">
             <div class="todo__nav todo__item_left" id="item__left">1 item left</div>
@@ -40,7 +50,7 @@
         <button id="button__test">TEST</button>
     </div>
 
-    <script src="script2.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
