--- a/index.html
+++ b/index.html
@@ -21,24 +21,34 @@
             </div>
             <input class="todo__input" type="text" placeholder="What needs to be done?" autofocus>
         </div>
-        <div class="todo__list todo__all">
-            <!-- <div class="todo__item" id="item__0">
-                <input class="todo__checkbox" type="checkbox" id="checkbox__0" />
-                <div class=" todo__content">1st todo
-                </div>
-                <button class="todo__delete" id="delete__0">X</button>
-            </div> -->
-        </div>
-        <div class="todo__list todo__active hidden">
-            <div class="todo__item" id="item__0">
-                <input class="todo__checkbox" type="checkbox" id="checkbox__0" />
-                <div class=" todo__content">1st todo
-                </div>
-                <button class="todo__delete" id="delete__0">X</button>
+
+        <div class="todo__list">
+            <div class="todo__list todo__all">
+                <!-- <div class="todo__item" id="item__00">
+                    <input class="todo__checkbox" type="checkbox" id="checkbox__0" />
+                    <div class=" todo__content">1st todo
+                    </div>
+                    <button class="todo__delete" id="delete__0">X</button>
+                </div> -->
+            </div>
+            <div class="todo__list todo__active none">
+                <!-- <div class="todo__item" id="item__01">
+                    <input class="todo__checkbox" type="checkbox" id="checkbox__0" />
+                    <div class=" todo__content">1st todo
+                    </div>
+                    <button class="todo__delete" id="delete__0">X</button>
+                </div> -->
+            </div>
+            <div class="todo__list todo__completed none">
+                <!-- <div class="todo__item" id="item__02">
+                    <input class="todo__checkbox" type="checkbox" id="checkbox__0" />
+                    <div class=" todo__content">1st todo
+                    </div>
+                    <button class="todo__delete" id="delete__0">X</button>
+                </div> -->
             </div>
         </div>
-        <div class="todo__list todo__completed hidden">
-        </div>
+
         <div class="todo__nav hidden" id="nav__bar">
             <div class="todo__nav todo__item_left" id="item__left">1 item left</div>
             <button class="todo__nav todo__filter_all active">All</button>
