--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <button class="todo__nav todo__filter_cmpltd">Completed</button>
             <button class="todo__nav todo__clear_cmpltd">Clear completed</button>
         </div>
-        <p class="todo__note">Double-click to edit a todo</p>
+        <p class="todo__note">Double-click to edit a todo - Enter to update content</p>
         <p class="todo__note">Created by Kathy Pham</p>
     </div>
 
